# component-docs

./: .codespell-ignore-words.txt  .gitattributes  .gitignore  CODEOWNERS  CONTRIBUTING.md  LICENSE.md  README.md  justfile
.github/: CODEOWNERS
.github/actions/mdbook/: action.yml
.github/workflows/: c-host.yml  codespell.yml  component-model.yml  deploy.yml  js.yml  mdbook.yml  rust.yml
component-model/: .gitignore  README.md  book.toml  robots.txt  sitemap.xml  spin.toml
component-model/examples/: add.wit
component-model/examples/composing-section-examples/: composition.wac  http-service.wit  regex.wit  validator.wit
component-model/examples/composition/: README.md  wasi_snapshot_preview1.reactor.wasm
component-model/examples/composition/add/: Cargo.toml
component-model/examples/composition/add/src/: lib.rs
component-model/examples/composition/add/wit/: world.wit
component-model/examples/composition/app/: Cargo.toml
component-model/examples/composition/app/src/: main.rs
component-model/examples/composition/app/wit/: world.wit
component-model/examples/composition/calculator/: Cargo.toml
component-model/examples/composition/calculator/src/: lib.rs
component-model/examples/composition/calculator/wit/: world.wit
component-model/examples/composition/sub/: README.md  sub.go
component-model/examples/composition/sub/wit/: world.wit
component-model/examples/example-c-host/: Dockerfile  Dockerfile.guest_and_host  Dockerfile.host  adder.wasm  host.c  justfile
component-model/examples/example-host/: Cargo.toml  README.md  add.c  add.wasm  add.wit
component-model/examples/example-host/src/: add.rs  add_wasi.rs  async_add.rs  main.rs  state.rs  sync_add.rs
component-model/examples/faq/: example-hello.wit  example.wit
component-model/examples/tutorial/: README  README.md  composition.wac
component-model/examples/tutorial/adder/: Cargo.toml
component-model/examples/tutorial/adder/src/: bindings.rs  lib.rs
component-model/examples/tutorial/adder/wit/: world.wit
component-model/examples/tutorial/c/adder/: component.c  component_with_printf.c
component-model/examples/tutorial/calculator/: Cargo.toml
component-model/examples/tutorial/calculator/src/: bindings.rs  lib.rs
component-model/examples/tutorial/command/: Cargo.toml
component-model/examples/tutorial/command/src/: bindings.rs  main.rs
component-model/examples/tutorial/command/wit/: app.wit
component-model/examples/tutorial/csharp/adder/: Component.cs  Program.cs  world-hostapp.wit
component-model/examples/tutorial/go/adder/: exports.go
component-model/examples/tutorial/jco/: README.md  calculator.composed.wasm  cli-calc.js  index.html  package-lock.json  package.json
component-model/examples/tutorial/jco/add/: README.md  package.json
component-model/examples/tutorial/jco/string-reverse-upper/: README.md  package.json
component-model/examples/tutorial/local/adder/: Cargo.toml
component-model/examples/tutorial/local/adder/src/: lib.rs
component-model/examples/tutorial/local/calculator/: Cargo.toml
component-model/examples/tutorial/local/calculator/src/: bindings.rs  lib.rs
component-model/examples/tutorial/local/command/: Cargo.toml
component-model/examples/tutorial/local/command/src/: bindings.rs  main.rs
component-model/examples/tutorial/python/: app.py  host.py
component-model/examples/tutorial/registry/adder-impl/: Cargo.toml
component-model/examples/tutorial/registry/adder-impl/src/: lib.rs
component-model/examples/tutorial/registry/command-impl/: Cargo.toml
component-model/examples/tutorial/wit/: calculator.wit
component-model/examples/tutorial/www/: README.md  cli-calc.js  index.html
component-model/examples/wit-section-examples/clocks/: monotonic-clock.wit  wall-clock.wit  world.wit
component-model/examples/wit-section-examples/filesystems/: types.wit
component-model/src/: SUMMARY.md  building-a-simple-component.md  composing-and-distributing.md  concepts.md  creating-and-consuming-components.md  creating-and-consuming.md  creating-runnable-components.md  design.md  implementations.md  importing-and-reusing-components.md  introduction.md  language-support.md  running-components.md  sitemap.xml  tutorial.md  using-http-in-components.md  using-wit-resources.md  what-is-a-component.md  wit-overview.md
component-model/src/advanced/: canonical-abi.md
component-model/src/composing-and-distributing/: composing.md  distributing.md
component-model/src/creating-and-consuming/: authoring.md  composing.md  distributing.md  running.md
component-model/src/creating-and-consuming-components/: consuming-rust.md  creating-rust.md
component-model/src/design/: async.md  canonical-abi.md  component-model-concepts.md  components.md  interfaces.md  migrating-to-p3.md  packages.md  why-component-model.md  wit-example.md  wit.md  worlds.md
component-model/src/implementations/: jco.md  wasmtime.md
component-model/src/language-support/: c.md  csharp.md  example-host-part1.md  example-host-part2.md  go.md  javascript.md  language-agnostic-tooling.md  language-agnostic.md  moonbit.md  other-languages.md  python.md  rust.md
component-model/src/language-support/building-a-simple-component/: c.md  csharp.md  go.md  javascript.md  moonbit.md  other-languages.md  python.md  rust.md  tinygo.md  wat.md
component-model/src/language-support/creating-runnable-components/: javascript.md  other-languages.md  rust.md
component-model/src/language-support/importing-and-reusing-components/: javascript.md  other-languages.md  rust.md
component-model/src/language-support/using-http-in-components/: rust.md
component-model/src/language-support/using-wit-resources/: rust.md
component-model/src/reference/: faq.md  useful-links.md  videos.md
component-model/src/running-components/: jco.md  wasmtime.md
component-model/src/runtimes/: jco.md  wasmtime.md
component-model/theme/: head.hbs  tabs-a11y.js  tabs-overrides.css  tabs-url-sync.js  tabs.css  version-notice.css
scripts/: generate_sitemap.py
wasi/: README.md
(+27 files in other folders)
