[package]
name = "example-host"
version = "0.1.0"
edition = "2021"
description = """
Example Rust-based WebAssembly host that executes WebAssembly components
"""

[dependencies]
anyhow = "1.0.72"
async-std = { version = "1.13", features = ["attributes"] }
clap = { version = "4", features = ["derive"] }
wasmtime = "34.0"
wasmtime-wasi = "34.0"
