[package]
name = "app"
version = "0.1.0"
edition = "2021"

[package.metadata.component]
package = "component:app"

[package.metadata.component.dependencies]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4.3.19", features = ["derive"] }
wit-bindgen-rt = { version = "0.24.0", features = ["bitflags"] }
[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"component:calculator" = { path = "../calculator/wit" }
"docs:adder" = { path = "../add/wit" }
"docs:subtractor" = { path = "../sub/wit" }