[package]
name = "calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen-rt = { version = "0.24.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:calculator"

[package.metadata.component.target.dependencies]
"docs:adder" = { path = "../add/wit" }  # directory containing the WIT package
"docs:subtractor" = { path = "../sub/wit" }  # directory containing the WIT package

[package.metadata.component.dependencies]
