[package]
name = "calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.24.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "docs:calculator"

[package.metadata.component.target.dependencies]
"docs:adder" = { path = "../wit/adder" }  # directory containing the WIT package

[package.metadata.component.target]
path = "../wit/calculator"
world = "calculator"

[package.metadata.component.dependencies]
