[package]
name = "command"
version = "0.1.0"
edition = "2021"

[package.metadata.component]
package = "docs:calculator"

[package.metadata.component.target]
path = "../wit/calculator.wit"
world = "app"

[dependencies]
anyhow = "1"
clap = { version = "4.3.19", features = ["derive"] }
bitflags = "2.4.2"
wit-bindgen-rt = { version = "0.24.0", features = ["bitflags"] }
