[package]
name = "command"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
wit-bindgen-rt = { version = "0.24.0", features = ["bitflags"] }
clap = { version = "4.3.19", features = ["derive"] }

[package.metadata.component.target]
path = "../wit/calculator.wit"
world = "app"

[package.metadata.component.target.dependencies]
"docs:adder" = { path = "../adder/wit" }
