[package]
name = "adder"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.4.2"
wit-bindgen-rt = { version = "0.24.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component-book:adder-impl"

[package.metadata.component.target]
path = "../../wit/local/adder.wit"
world = "adder"

[package.metadata.component.dependencies]
