[package]
name = "command"
version = "0.1.0"
edition = "2021"

[package.metadata.component]
package = "component-book:command-impl"

[package.metadata.component.target]
path = "../../wit/local/calculator.wit"
world = "app"

[package.metadata.component.target.dependencies]
"component-model:adder" = { path = "../../wit/local/adder.wit" }

[dependencies]
anyhow = "1"
clap = { version = "4.3.19", features = ["derive"] }
bitflags = "2.4.2"
wit-bindgen-rt = { version = "0.24.0", features = ["bitflags"] }
